--- a/index.html
+++ b/index.html
@@ -43,12 +43,10 @@
   }
 }
 </script>
-  <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="./index.css">
 </head>
   <body>
-    <div id="root"></div>
-    <!-- Changed from /index.tsx to index.tsx for GitHub Pages subfolder compatibility -->
-    <script type="module" src="index.tsx"></script>
-  <script type="module" src="/index.tsx"></script>
+<div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
