--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="TrackPro">
-    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/3069/3069162.png">
+    <link rel="icon" type="image/png" href="https://lucide.dev/api/icons/timer?color=10b981&size=48">
+    <link rel="apple-touch-icon" href="https://lucide.dev/api/icons/timer?color=10b981&size=512">
+    <meta name="theme-color" content="#0f172a">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
